--- a/src/components/CVSection.astro
+++ b/src/components/CVSection.astro
@@ -4,7 +4,12 @@ import { getConfig } from "../config";
 import { getLangFromUrl } from "../i18n/utils";
 import { GraduationCap, Briefcase, BookOpen, Award, Code } from "lucide-astro";
 
-const lang = getLangFromUrl(Astro.url);
+interface Props {
+    lang?: "en" | "zh";
+}
+
+const { lang: langFromProps } = Astro.props as Props;
+const lang = langFromProps ?? getLangFromUrl(Astro.url);
 const config = getConfig(lang);
 ---
 
